Hopefully fixed the topIcon mobile view

--- a/mainStyle.css
+++ b/mainStyle.css
@@ -61,8 +61,6 @@ body{
     width: 100px;
     height: 100px;
     position: relative;
-    display: block;
-    align-self: auto;
 }
 
 .topIcon{
